# RFdiffusion

./: .gitignore  Apptainer  Attention_module.py  Embeddings.py  LICENSE  README.md  RoseTTAFoldModel.py  SE3_network.py  Track_module.py  chemical.py  conda.yml  contigs.py  diff_util.py  diffusion.py  igso3.py  kinematics.py  model_input_logger.py  pyproject.toml  run_inference.py  scoring.py  setup.py  util.py  util_module.py
.github/: CODEOWNERS
.rosetta-ci/: .gitignore  benchmark.py  benchmark.template.ini  test-sets.yaml
debug_scripts/: debug_script.py  substrate_debug.py
docker/: Dockerfile
env/: SE3nv.yml
examples/: design_cyclic_oligos.sh  design_dihedral_oligos.sh  design_enzyme.sh  design_macrocyclic_binder.sh  design_macrocyclic_monomer.sh  design_motifscaffolding.sh  design_motifscaffolding_inpaintseq.sh  design_motifscaffolding_with_target.sh  design_nickel.sh  design_partialdiffusion.sh  design_partialdiffusion_multipleseq.sh  design_partialdiffusion_withseq.sh  design_ppi.sh  design_ppi_flexible_peptide.sh  design_ppi_flexible_peptide_with_secondarystructure_specification.sh  design_ppi_scaffolded.sh  design_tetrahedral_oligos.sh  design_timbarrel.sh  design_unconditional.sh  design_unconditional_w_contact_potential.sh  design_unconditional_w_monomer_ROG.sh  test_CTR_default.sh  test_container.sh
helper_scripts/: make_secstruc_adj.py
inference/: model_runners.py  symmetry.py  utils.py
potentials/: manager.py  potentials.py
rfdiffusion/: Attention_module.py  AuxiliaryPredictor.py  Embeddings.py  RoseTTAFoldModel.py  SE3_network.py  igso3.py  (+11 more)
(+53 files in other folders)
